# cmake-xcode-test

./: CMakeLists.txt
App/: CMakeLists.txt  app.c
C/: CMakeLists.txt
C/A/: CMakeLists.txt  a.c
C/B/: CMakeLists.txt  b.c
